[package]
name = "framering"
description = "Queue-of-queues container"
version = "0.1.0"
authors = ["Joe Hirschfeld <joe@ibj.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Ichbinjoe/framering"
homepage = "https://github.com/Ichbinjoe/framering"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
